[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/level_two/answerMachine.gd" type="Script" id=1]
[ext_resource path="res://art/cricle.png" type="Texture" id=2]
[ext_resource path="res://art/stage 2/answer_machine.png" type="Texture" id=3]
[ext_resource path="res://ui/basic_theme.tres" type="Theme" id=4]
[ext_resource path="res://ui/build_ui.tres" type="Theme" id=5]
[ext_resource path="res://art/stage 2/answer_machine_bottom.png" type="Texture" id=6]

[node name="answer_machine" type="Node2D"]
position = Vector2( 65, 63 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 5.92969, -20.5 )
scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 3 )

[node name="machine_bottom" type="Sprite" parent="."]
position = Vector2( 6, 137.9 )
scale = Vector2( 1.6, 2.00253 )
texture = ExtResource( 6 )

[node name="CounterIndicator" type="Label" parent="."]
margin_left = -97.0
margin_top = -43.0
margin_right = -8.0
margin_bottom = -13.0
theme = ExtResource( 5 )
text = "1"

[node name="Timer" type="Timer" parent="."]

[node name="LightBulb" type="Sprite" parent="."]
visible = false
position = Vector2( 100, -34 )
scale = Vector2( 0.424051, 0.424051 )
texture = ExtResource( 2 )

[node name="SubmitButton" type="Button" parent="."]
visible = false
margin_left = -98.0
margin_top = 38.0
margin_right = -22.0
margin_bottom = 64.0
theme = ExtResource( 4 )
text = "Tarkasta"

[node name="ScoreLabel" type="Label" parent="."]
visible = false
margin_left = -117.0
margin_top = 79.0
margin_right = -22.0
margin_bottom = 109.0
theme = ExtResource( 5 )
text = "Pisteet 0"

[node name="OptionButton1" type="OptionButton" parent="."]
visible = false
margin_left = 85.0
margin_top = 4.0
margin_right = 114.0
margin_bottom = 30.0
grow_horizontal = 0
theme = ExtResource( 4 )

[node name="OptionButton2" type="OptionButton" parent="."]
visible = false
margin_left = 86.0
margin_top = 40.0
margin_right = 115.0
margin_bottom = 66.0
grow_horizontal = 0
theme = ExtResource( 4 )

[node name="Hint" type="Label" parent="."]
visible = false
margin_left = -115.0
margin_top = 116.0
margin_right = 147.0
margin_bottom = 278.0
rect_pivot_offset = Vector2( 83, -80 )
theme = ExtResource( 4 )
text = "Vinkki:
1 = SÄTEILY + SÄHKÖ
2 = ULKOLÄMPÖTILA + LÄMMITYS"
autowrap = true

[node name="TypeLabel" type="Label" parent="."]
visible = false
margin_left = -60.0
margin_top = 12.0
margin_right = 28.0
margin_bottom = 27.0
theme = ExtResource( 5 )
text = "Frame 0"

[node name="Timer" type="Timer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = -69.0
margin_top = -37.0
margin_right = 84.0
margin_bottom = 84.0
theme = ExtResource( 4 )

[node name="QuestionLabel" type="Label" parent="VBoxContainer"]
margin_right = 153.0
margin_bottom = 22.0
autowrap = true

[node name="OptionButton1" type="OptionButton" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 153.0
margin_bottom = 52.0

[node name="SubmitButton" type="Button" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 153.0
margin_bottom = 82.0
text = "Submit"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 153.0
margin_bottom = 108.0

[node name="ScoreLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 61.0
margin_bottom = 22.0
text = "Score 0"

[node name="LightBulb" type="Sprite" parent="VBoxContainer/HBoxContainer"]
position = Vector2( 137, 15 )
scale = Vector2( 0.424051, 0.424051 )
texture = ExtResource( 2 )
